feat: done refactor and added README